--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,8 +1,84 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="/static/css/styles.css" type="text/css">
-  </head>
-  <body>
-    The best place to start is the "WelcomeController.py" file in app/controllers.
-  </body>
+<head>
+	<title>Habit Breaker | Home Page</title>
+	<meta charset ="utf-8">
+	<meta name="description" content="Habit breaker helps you to break your habits">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
+	<script type="text/javascript" src="/static/js/script.js"></script>
+	<script type="text/javascript" src="static/js/jquery.min.v3.1.0.js"></script>
+</head>
+<body>
+	<div id="wrapper">
+		<header>
+			<a href='/'><h1>Habit Breaker</h1></a>
+			<a href="/about">About</a>
+			{% if not 'id' in session %}
+				<a href="/signin">Sign In</a>
+				<a href="/signup">Sign Up</a>
+			{%else%}
+				<a href="/users/{{session['id']}}">My page</a>
+				<a href="/logout">Log Out</a>
+			{% endif %}
+		</header>
+		<div class="box">
+			<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
+			<h2>Habit Breaker</h2>
+			<p>
+				Aenean convallis tortor purus, at commodo nisl porttitor quis. Nulla eleifend hendrerit lacus at ullamcorper. Mauris a malesuada odio. Cras pretium dui eu enim laoreet, ac fermentum ante convallis. Phasellus sit amet luctus diam. Pellentesque semper, nibh quis tincidunt laoreet, felis orci tincidunt dui, sed dapibus risus nisi at sapien. Maecenas gravida sem turpis, eget pharetra magna fringilla in. Nam sed convallis sapien. In ultrices tellus eu scelerisque bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin quis gravida lorem. Pellentesque non semper metus, et ultricies eros. Proin tincidunt ullamcorper quam quis imperdiet. Vestibulum massa ante, tempor id rutrum vel, volutpat eu leo.
+			</p>
+		</div>
+		<!-- <div class="box">
+			<h2>Quoteble Quotes:</h2>
+				{% if quotes%}
+					{% for quote in quotes %}
+					<p><span class='valid'>{{quote['author']}}: </span> 
+						{{quote['quote']}}
+					</p>
+					<p>Posted by: <a href="/users/{{quote['user_id_who_wrote']}}" >{{quote['alias']}}</a></p>
+					<a href="/add_fav/{{quote['quote_id']}}">Add to my list</a>
+					{% endfor %}
+				{% endif %}
+		</div>
+		<div class = "box">
+			<h3>Your favorites:</h3>
+			{% if favorites%}
+				{% for favorite in favorites %}
+					<p><span class='valid'>{{favorite['author']}}: </span>
+						{{favorite['quote']}}
+					</p>
+					<p>Posted by: <a href="/users/{{favorite['user_id_who_wrote']}}" >{{favorite['alias']}}</a></p>
+					<a href="/remove/{{favorite['quote_id']}}">Remove from my list</a>
+				{% endfor %}
+			{%  endif%}
+		</div>
+		<div class="box">
+			<h2>Contribute a Quote</h2>
+			{% with messages = get_flashed_messages(with_categories=true) %}
+				{% if messages %}
+					{% for category, message in messages %}
+						
+						<span class="{{category}}">{{ message }}</span>
+						
+					{% endfor %}
+				{% endif %}
+			{% endwith %}
+			<form action="/quotes/add" method="POST">
+				<label for="author">Quoted by: 
+					<input type="text" name="author" id="author" placeholder="Author">
+				</label>
+				<label for="quote"><span>Description: </span>
+					<textarea name="quote" id="quote" placeholder="Quote goes here"></textarea>
+				</label>
+				<input type="submit" value="Add">
+			</form>
+		</div> -->
+
+		<footer>
+			<p> &copy;RabbitBreakesTeam <a href="/help">Help</a> <a href="/contact">Contact</a></p>
+		</footer>
+	</div>
+</body>
 </html>
