Some more changes have been done

--- a/app/views/users/edit_user.html
+++ b/app/views/users/edit_user.html
@@ -62,7 +62,7 @@
 			<hr>
 			<a href="/users/account/{{session['id']}}">Cancel</a>
 			<a href="/users/password/{{session['id']}}">Change password</a>
-			<a href="/users/delete/{{session['id']}}">Delete Account</a>
+			<a href="/users/delete_user/{{session['id']}}">Delete Account</a>
 			<hr>
 		</div>
 		<footer>
