--- a/app/views/users/password.html
+++ b/app/views/users/password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Habit Breaker | User Edit page</title>
+	<title>Habit Breaker | User Password Change page</title>
 	<meta charset ="utf-8">
 	<meta name="description" content="Habit breaker will help to break your habits">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
@@ -27,7 +27,7 @@
 		<div class="box">
 			<h2>Welcome{% if 'first_name' in session %}, {{session['first_name']}}{% endif %}!</h2>
 			<hr><br>
-			<h3>Update your information:</h3>
+			<h3>Update your password:</h3>
 			{% with messages = get_flashed_messages(with_categories=true) %}
 				{% if messages %}
 					{% for category, message in messages %}
@@ -48,7 +48,7 @@
 			<hr>
 			<a href="/users/account/{{session['id']}}">Cancel</a>
 			<a href="/users/edit/{{session['id']}}">Edit account info</a>
-			<a href="/users/delete/{{session['id']}}">Delete Account</a>
+			<a href="/users/delete_user/{{session['id']}}">Delete Account</a>
 			<hr>
 		</div>
 		<footer>
