--- a/app/views/users/show_user.html
+++ b/app/views/users/show_user.html
@@ -34,7 +34,7 @@
 				{% endfor %}
 			{% endif %}
 			
-			<a href="#">List ot your Helpers</a>
+			<a href="#">List of my Helpers</a>
 				
 			<a href="#">Help a Friend to Break the Habit</a>
 			<a href="#">Submit Violation</a>
