--- a/app/views/users/account.html
+++ b/app/views/users/account.html
@@ -42,7 +42,7 @@
 			<hr>
 			<a href="/users/edit/{{session['id']}}">Edit account info</a>
 			<a href="/users/password">Change password</a>
-			<a href="/users/delete/{{session['id']}}">Delete Account</a>
+			<a href="/users/delete_user/{{session['id']}}">Delete Account</a>
 			<hr>
 		</div>
 		<footer>
