--- a/app/views/habits/show_habit.html
+++ b/app/views/habits/show_habit.html
@@ -5,10 +5,11 @@
 	<meta charset ="utf-8">
 	<meta name="description" content="Habit breaker will help to break your habits">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" >
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<script type="text/javascript" src="/static/js/jquery.min.v3.1.0.js"></script>
 	<script type="text/javascript" src="/static/js/script.js"></script>
-	<script type="text/javascript" src="static/js/jquery.min.v3.1.0.js"></script>
+	
 </head>
 <body>
 	<div id="wrapper">
