--- a/app/views/main/signin.html
+++ b/app/views/main/signin.html
@@ -22,6 +22,7 @@
 				<a href="/signup">Sign Up</a>
 			{%else%}
 				<a href="/users/{{session['id']}}">My page</a>
+				<a href="/users/account/{{session['id']}}">Account info</a>
 				<a href="/logout">Log Out</a>
 			{% endif %}
 		</header>
@@ -48,6 +49,76 @@
 				<input type="submit" value="Log In" name="submit">
 				<!-- <input type="submit" value="Clear the form" name="submit"> -->
 			</form>
+						<!-- facebook signup -->
+			<script>
+	  			function statusChangeCallback(response) {
+	  				console.log('statusChangeCallback');
+	    			console.log(response);
+
+	    			if (response.status === 'connected') {
+	    				testAPI(); 
+	    			} else if (response.status === 'not_authorized') {
+	    				document.getElementById('status').innerHTML = 'Please log ' + 'into this app.';
+	    			} else {
+	      				document.getElementById('status').innerHTML = 'Please log ' + 'into Facebook.';
+	  				}
+	  			}
+
+	  			function checkLoginState() {
+	    			FB.getLoginStatus(function(response) {
+	      				statusChangeCallback(response);
+	    			});
+	  			}
+
+				window.fbAsyncInit = function() {
+		  			FB.init({
+		   				appId      : '',
+		    			cookie     : true,
+		    			xfbml      : true,  
+		   				version    : 'v2.2' 
+		 			});
+
+		 			FB.getLoginStatus(function(response) {
+		    			statusChangeCallback(response);
+		    			console.log(response.authResponse.userID);
+		  			});
+	  			};
+
+	  			(function(d, s, id) {
+	   				var js, fjs = d.getElementsByTagName(s)[0];
+	    			if (d.getElementById(id)) return;
+	   				js = d.createElement(s); js.id = id;
+	   				js.src = "//connect.facebook.net/en_US/sdk.js";
+	    			fjs.parentNode.insertBefore(js, fjs);
+	 			}(document, 'script', 'facebook-jssdk'));
+
+ 				function testAPI() {
+	    			console.log('Welcome!  Fetching your information.... ');
+	  				FB.api('/me','GET',
+	 				{"fields":"id,email,first_name,last_name"}, function(response) {
+	      				console.log('Successful login for: ' + response.first_name + response.last_name);
+	      				// document.getElementById('status').innerHTML = 'Thanks for logging in, ' + response.first_name + '!';
+	      				console.log(response);
+
+	      				window.location = "/facebook_success/"+response.first_name+"/"+response.last_name+"/"+response.email;
+	 
+    				});
+  				}
+		</script>
+
+			<!-- <div id="fb-root"></div>
+			<script>
+				(function(d, s, id) {
+				  var js, fjs = d.getElementsByTagName(s)[0];
+				  if (d.getElementById(id)) return;
+				  js = d.createElement(s); js.id = id;
+				  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=";
+				  fjs.parentNode.insertBefore(js, fjs);
+				}(document, 'script', 'facebook-jssdk'));
+			</script>
+			 -->
+			<!-- <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="true" onlogin="checkLoginState();"></div> -->
+			<fb:login-button scope="public_profile,email" data-size="large" onlogin="checkLoginState();"></fb:login-button>
 		</div>
 
 		<footer>
