--- a/app/views/users/account.html
+++ b/app/views/users/account.html
@@ -22,6 +22,7 @@
 				<a href="/signup">Sign Up</a>
 			{%else%}
 				<a href="/users/{{session['id']}}">My page</a>
+				<a href="/users/account/{{session['id']}}">Account info</a>
 				<a href="/logout">Log Out</a>
 			{% endif %}
 		</header>
