All functionality workng plus twilio and facebook

--- a/app/views/habits/add_habit.html
+++ b/app/views/habits/add_habit.html
@@ -15,7 +15,7 @@
 	<div id="wrapper">
 		<header>
 			<a href='/'><h1>Habit Breaker</h1></a>
-			<a href="/about">About</a>
+			<a href="#">About</a>
 			{% if not 'id' in session %}
 				<a href="/signin">Sign In</a>
 				<a href="/signup">Sign Up</a>
@@ -54,7 +54,7 @@
 			
 		</div>
 		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="/help">Help</a> <a href="/contact">Contact</a></p>
+			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
 		</footer>
 	</div>
 </body>
