--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,7 +15,8 @@
 	<div id="wrapper">
 		<header>
 			<a href='/'><h1>Habit Breaker</h1></a>
-			<a href="/about">About</a>
+			<!-- <a class= "logo" href='/'><img src="/static/habit_logo.png"/></a> -->
+			<a href="#">About</a>
 			{% if not 'id' in session %}
 				<a href="/signin">Sign In</a>
 				<a href="/signup">Sign Up</a>
@@ -33,7 +34,7 @@
 			</p>
 		</div>
 		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="/help">Help</a> <a href="/contact">Contact</a></p>
+			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
 		</footer>
 	</div>
 </body>
