--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -96,3 +96,13 @@ table{
 table, th, td {
 	border: 1px dotted grey;
 } 
+.logo {
+	display: block;
+	width:100%;
+	background-color: #7f7f81 !important;
+	border: none;
+	box-shadow: 0px 0px 0px #7f7f81;
+}
+.logo img{
+	width: 60%;
+}
