--- a/app/views/users/account.html
+++ b/app/views/users/account.html
@@ -16,7 +16,7 @@
 		<header>
 			<a href='/'><h1>Habit Breaker</h1></a>
 			
-			<a href="/about">About</a>
+			<a href="#">About</a>
 			{% if not 'id' in session %}
 				<a href="/signin">Sign In</a>
 				<a href="/signup">Sign Up</a>
@@ -48,7 +48,7 @@
 			<hr>
 		</div>
 		<footer>
-			<p> &copy;RabbitBreakesTeam <a href="/help">Help</a> <a href="/contact">Contact</a></p>
+			<p> &copy;RabbitBreakesTeam <a href="#">Help</a> <a href="#">Contact</a></p>
 		</footer>
 	</div>
 </body>
