changed links in submit.html and show_user.html

--- a/app/views/users/show_user.html
+++ b/app/views/users/show_user.html
@@ -67,7 +67,7 @@
 			{% endif %}
 			<br>
 			<hr><hr><br>
-			<h3>Your Friends Habits:</h3>
+			<h3>Your Friends Habits:</h3><br>
 			{% if friend_habits %}
 				
 
